Use percentage in stead on auto on width for select element to avoid bug on Firefox

--- a/src/skin/options-layout.css
+++ b/src/skin/options-layout.css
@@ -160,7 +160,7 @@ a, a:hover, a:active, a:visited{
   }
 
   #excludedDomainsBox {
-    width: auto !important;
+    width: 100% !important;
   }
 
   #trackingDomainSearch {
